--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,33 +1,43 @@
 worker_processes auto;
-worker_rlimit_nofile 8192;
+worker_rlimit_nofile 65535;
 
 events {
-    worker_connections  4096;
+	multi_accept on;
+	worker_connections 65535;
 }
 
 http {
-    include /etc/nginx/mime.types;
-    include /etc/nginx/fastcgi.conf;
-    sendfile     on;
-    tcp_nopush   on;
-    server_names_hash_bucket_size 128;
-
     server {
         listen 80;
-        error_log  /var/log/nginx/error.log;
-        access_log /var/log/nginx/access.log;
+        server_name syscli.com;
+        root /var/www/html/public;
+
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-XSS-Protection "1; mode=block";
+        add_header X-Content-Type-Options "nosniff";
+
+        index index.html index.htm index.php;
+
+        charset utf-8;
 
         location / {
-            try_files $uri $uri/ /index.php?$query_string;
+            try_files $uri $uri/ /index.php$is_args$args;
         }
 
-        location ~ [^/]\.php(/|$) {
-            fastcgi_param HTTP_PROXY "";
+        location = /favicon.ico { access_log off; log_not_found off; }
+        location = /robots.txt  { access_log off; log_not_found off; }
 
+        error_page 404 /index.php;
+
+        location ~ \.php$ {
             fastcgi_pass app:9000;
             fastcgi_index index.php;
-
+            fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
             include fastcgi_params;
+        }
+
+        location ~ /\.(?!well-known).* {
+            deny all;
         }
     }
 }
