--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,8 @@ services:
     ports:
       - 9000:9000
     volumes:
-      - ./app:/var/www/html
+      - ./app:/usr/share/nginx/app
+    working_dir: /usr/share/nginx/app
     networks:
       - backend
     links:
@@ -51,6 +52,7 @@ services:
       - 80:80
       - 443:443
     volumes:
+      - ./app:/usr/share/nginx/app
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     links:
       - app
