--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,7 +10,9 @@ http {
     server {
         listen 80;
         server_name syscli.com;
-        root /var/www/html/public;
+        root /usr/share/nginx/app/public;
+
+        include /etc/nginx/mime.types;
 
         add_header X-Frame-Options "SAMEORIGIN";
         add_header X-XSS-Protection "1; mode=block";
@@ -27,13 +29,14 @@ http {
         location = /favicon.ico { access_log off; log_not_found off; }
         location = /robots.txt  { access_log off; log_not_found off; }
 
-        error_page 404 /index.php;
-
         location ~ \.php$ {
+            try_files $uri =404;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
             fastcgi_pass app:9000;
             fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
             include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param PATH_INFO $fastcgi_path_info;
         }
 
         location ~ /\.(?!well-known).* {
